--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-      "target": "es6",
+      "target": "es2017",
+      "lib": ["es2017", "dom"],
       "outDir": "dist", //optionally use “” to not use an output folder
       "sourceMap": true,
       "strict": true,
